# dl-inference-server

./: CMakeLists.txt  README.md  protogen.sh  rebuild.sh
src/clients/c++/: image_client.cc  image_resampler.cc  request.h
